k8s/overlays/staging/sciencespo/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: pprd.projet-resin.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
